--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 
                 <div class="row">
                     <div class="col-12">
-                        <form method="post" action="https://formspree.io/f/your-id">
+                        <form method="post" action="https://formspree.io/f/mgozndjz>
                             <div class="row gtr-uniform gtr-50">
                                 <div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" required /></div>
                                 <div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" required /></div>
