--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
         <link rel="stylesheet" href="assets/css/main.css" />
     </head>
     <body class="is-preload">
-<div class="mode-switcher-container">
+
+        <header id="header">
+            <div class="inner">
+          <div class="mode-switcher-container">
                     <span class="mode-label logic-label">LOGIC</span>
                     <label class="switch">
                         <input type="checkbox" id="mode-toggle">
                         <span class="slider round"></span>
                     </label>
                     <span class="mode-label wild-label">WILD</span>
-                </div>
-        <header id="header">
-            <div class="inner">
-                
+                </div>      
 
-                <a href="#" class="image avatar"><img src="images/wildlogic_logo_white.png" alt="WildLogic Boar" /></a>
+                <a href="https://www.wildlogic.co.za" class="image avatar"><img src="images/wildlogic_logo_white.png" alt="WildLogic Logo" /></a>
                 
                 <h1 class="logic-content">Unearthing the extraordinary. Quantifying the unquantifiable.</h1>
                 <h1 class="wild-content">High-Voltage Creative. Engineered Systems.</h1>
