--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <div class="col-12">
                                     <ul class="actions">
                                         <li class="logic-content"><input type="submit" value="Execute Protocol" class="button primary" /></li>
-                                        <li class="wild-content"><input type="submit" value="Send Brief" class="button primary" style="background-color: #ff4500; border-color: #ff4500;" /></li>
+                                        <li class="wild-content"><input type="submit" value="Get To Work" class="button primary" style="background-color: #ff4500; border-color: #ff4500;" /></li>
                                     </ul>
                                 </div>
                             </div>
@@ -112,7 +112,7 @@
             <div class="inner">
                 <ul class="copyright">
                     <li>&copy; 2026 WildLogic.</li>
-                    <li>Status: <span class="logic-content" style="display:inline">Nominal</span><span class="wild-content" style="display:none">Feral</span>.</li>
+                    <li>Status: <span class="logic-content" style="display:inline">Scalable</span><span class="wild-content" style="display:inline">100% Bullshit-Free Zone.</span>.</li>
                 </ul>
             </div>
         </footer>
