--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
             <div class="inner">
                 <ul class="copyright">
                     <li>&copy; 2026 WildLogic.</li>
-                    <li>Status: <span class="logic-content" style="display:inline">Scalable</span><span class="wild-content" style="display:inline">100% Bullshit-Free Zone.</span>.</li>
+                    <li>Status: 
+    <span class="logic-content">Scalable</span>
+    <span class="wild-content">100% Bullshit-Free Zone.</span>
+</li>
                 </ul>
             </div>
         </footer>
