--- a/index.html
+++ b/index.html
@@ -112,10 +112,7 @@
             <div class="inner">
                 <ul class="copyright">
                     <li>&copy; 2026 WildLogic.</li>
-                    <li>Status: 
-    <span class="logic-content">Scalable</span>
-    <span class="wild-content">100% Bullshit-Free Zone.</span>
-</li>
+                    <li>Status: <span class="logic-content">Scalable</span><span class="wild-content">100% Bullshit-Free Zone.</span></li>
                 </ul>
             </div>
         </footer>
